--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,14 @@
 						<link>http://download.oracle.com/javase/6/docs/api/</link>
 					</links>
 				</configuration>
+				<reportSets>
+					<reportSet>
+						<id>default</id>
+						<reports>
+							<report>javadoc</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 		</plugins>
 	</reporting>
