--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.jakewharton</groupId>
 	<artifactId>apibuilder</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1</version>
 
 	<name>API Builder</name>
 	<description>A Java utility class which facilitates the construction of RESTful API wrappers using the builder pattern.</description>
